--- a/src/static/css/styles.css
+++ b/src/static/css/styles.css
@@ -1,5 +1,4 @@
-/* CSS base */
-/* Reset do box-sizing e margem/preenchimento padrão */
+
 * {
     margin: 0;
     padding: 0;
@@ -17,29 +16,30 @@ body {
     justify-content: space-between;
     background-color: rgb(0, 0, 0);
     padding: 10px;
-    border: none; /* Remover a borda */
-    justify-content: flex-end; /* Alinhar os botões à direita */
+    border: none;
+    justify-content: flex-end;
 }
 
 .botoes-nav {
-    float: left; /* Alinhar os botões à esquerda */
+    float: left;
     margin-right: 10px;
 }
 
 .titulo {
-    font-size: 3rem; /* Define o tamanho da fonte do título */
-    max-width: 90%; /* Define a largura máxima do título */
+    font-size: 50px;
+    max-width: 90%;
     color: #1db954;
     margin-right: 55%;
 }
+
 .bebas-neue-regular {
     font-family: "Bebas Neue", sans-serif;
-    font-weight: 400;/* CSS base */
+    font-weight: 400;
 }
 
 .subtitulo {
     color: #1db954;
-    margin-top: 1%; /* Ajuste a margem superior para 3% */
+    margin-top: 1%;
     text-align: center;
 }
 
@@ -47,11 +47,11 @@ body {
     font-family: "Archivo Black", sans-serif;
     font-weight: 400;
     font-style: normal;
-  }
+}
 
 .imagem {
     margin-right: 3%;
-    height: 75px;
+    height: 100px;
 }
 
 .selec_arq {
@@ -73,7 +73,7 @@ body {
 .retangulo-grafico {
     width: 90%;
     height: 70vh;
-    margin: 2% auto; /* Centralize o retângulo e defina uma margem superior */
+    margin: 2% auto;
     border-radius: 10px;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
@@ -98,6 +98,7 @@ body {
     background-color: #1db954;
     margin-left: 1%;
     margin-top: 1px;
+    font-size: 20px;
 }
 
 .moldura .volume,
@@ -126,18 +127,23 @@ input[type="file"] {
     margin-right: 10px;
 }
 
+.botaohome button {
+    font-size: 25px;
+}
+
 .carrosel {
     border: solid;
     border-color: #1db954;
     max-width: 100%;
     height: auto;
-    margin: -3% auto 1% auto; /* Ajuste a margem superior para 4% */
+    margin: -3% auto 1% auto;
 }
 
 .atualização {
-    margin-top: 3%; /* Adiciona uma margem superior */
-    color: white;
-    text-align: center; /* Alinha o texto ao centro */
+    margin-top: 3%;
+    color: #1db954;
+    text-align: center;
+    font-size: 20px;
 }
 
 .concert-one-regular {
@@ -153,7 +159,7 @@ input[type="file"] {
 }
 
 .texto {
-    margin-top: 1%; /* Ajuste a margem superior para 3% */
+    margin-top: 1%;
     margin-left: 20%;
     margin-right: 20%;
     text-align: center;
@@ -168,21 +174,20 @@ input[type="file"] {
 }
 
 .chart-grid {
-    display: flex;
-    flex-wrap: wrap;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 15px;
     justify-content: center;
-    gap: 20px; /* Espaçamento entre os gráficos */
-    margin-bottom: 20px; /* Adiciona uma margem inferior */
+    margin-bottom: 20px;
 }
 
 
 .chart-container {
+    width: 100%;
     height: 400px;
-    width: 500px;
-    position: relative;
-    background-color: rgba(255, 255, 255, 0.2); /* Cor de fundo com transparência */
+    background-color: rgba(255, 255, 255, 0.2);
     border-radius: 10px;
-    overflow: hidden; /* Evita que os gráficos ultrapassem os limites do contêiner */
+    overflow: hidden;
 }
 
 .chart-label {
@@ -191,7 +196,12 @@ input[type="file"] {
     left: 50%;
     transform: translateX(-50%);
     font-weight: bold;
-    color: #1db954; /* Cor do rótulo */
+    color: #1db954;
+}
+
+.chart-container-small {
+    width: 300px;
+    height: 300px;
 }
 
 .body {
@@ -200,15 +210,14 @@ input[type="file"] {
     justify-content: center;
 }
 
-.rodapé{
+.rodapé {
     margin-bottom: 3%;
 }
 
-/* Regras @media para tornar o cabeçalho responsivo em dispositivos móveis */
 @media only screen and (max-width: 1024px) {
     .titulo {
-        margin-right: 4%;
-        font-size: 1.8rem; /* Reduzir o tamanho da fonte */
+        margin-right: 60%;
+        font-size: 1.8rem;
         text-align: left;
     }
 }
@@ -216,27 +225,43 @@ input[type="file"] {
 @media only screen and (max-width: 820px) {
     .titulo {
         margin-right: 42%;
-        font-size: 1.5rem; /* Reduzir o tamanho da fonte */
+        font-size: 35px;
+        
         text-align: left;
+    }
+
+    .chart-container {
+        height: 200px;
     }
 }
 
 @media only screen and (max-width: 768px) {
+    .chart-container {
+        height: 200px;
+    }
+
     .titulo {
         margin-right: 40%;
-        font-size: 1.3rem; /* Reduzir o tamanho da fonte */
+        font-size: 27px;
         text-align: left;
+    }
+
+    .chart-grid {
+        grid-template-columns: 1fr;
+    }
+
+    .chart-container {
+        height: 300px;
+        width: 85%;
+        margin-left: 8%;
     }
 }
 
 @media only screen and (max-width: 480px) {
-    .cabecalho {
-        padding: 5px; /* Reduzir o preenchimento */
-    }
 
     .titulo {
-        margin-right: 13%;
-        font-size: 1.3rem; /* Reduzir o tamanho da fonte */
+        margin-right: 15%;
+        font-size: 25px;
         text-align: left;
     }
 
@@ -246,7 +271,7 @@ input[type="file"] {
         margin-left: 10px;
     }
 
-    .botoes-nav{
+    .botoes-nav {
         font-size: 10px;
         justify-content: flex-start;
     }
@@ -255,27 +280,40 @@ input[type="file"] {
         margin-top: 8%;
     }
 
-    .atualização{
+    .atualização {
         margin-left: 5%;
         margin-right: 5%;
-        font-size: 70%;
+        font-size: 80%;
     }
 
-    .texto{
+    .texto {
         margin-left: 5%;
         margin-right: 5%;
-        font-size: 180%;
+        font-size: 100%;
     }
 
-    .carrosel{
+    .carrosel {
         width: 80%;
         height: 70%;
         margin-top: 3%;
         margin-bottom: 3%;
     }
 
-    .chart-container{
-        width: 300px;
-        height: 200px;
+
+    .titulo-graficos{
+        font-size: 20px;
     }
+
+    .corbotão{
+        font-size: 15px;
+    }
+
+    .chart-grid {
+        grid-template-columns: 1fr;
+    }
+
+    .chart-container {
+        height: 300px;
+    }
+
 }
